extracting metric value in multiple ways (#1140)
* migrate this PR to v1beta1

* fix

* fix

* fix

* add example for metric strategies

* modify MetricStrategy specification

* fix
