# pkg/apis/controller/common/v1beta1/common_types.go
@@ -51,6 +51,8 @@ type ObjectiveSpec struct {
 	// This can be empty if we only care about the objective metric.
 	// Note: If we adopt a push instead of pull mechanism, this can be omitted completely.
 	AdditionalMetricNames []string `json:"additionalMetricNames,omitempty"`
+	// This field is allowed to missing, experiment defaulter (webhook) will fill it.
+	MetricStrategies []MetricStrategy `json:"metricStrategies,omitempty"`
 }
 
 type ObjectiveType string
@@ -66,9 +68,25 @@ type ParameterAssignment struct {
 	Value string `json:"value,omitempty"`
 }
 
+// ObjectiveExtractType describes the various approaches to extract objective value from metrics.
+type MetricStrategyType string
+
+const (
+	ExtractByMin    MetricStrategyType = "min"
+	ExtractByMax    MetricStrategyType = "max"
+	ExtractByLatest MetricStrategyType = "latest"
+)
+
+type MetricStrategy struct {
+	Name  string             `json:"name,omitempty"`
+	Value MetricStrategyType `json:"value,omitempty"`
+}
+
 type Metric struct {
-	Name  string `json:"name,omitempty"`
-	Value string `json:"value,omitempty"`
+	Name   string  `json:"name,omitempty"`
+	Min    float64 `json:"min,omitempty"`
+	Max    float64 `json:"max,omitempty"`
+	Latest string  `json:"latest,omitempty"`
 }
 
 // +k8s:deepcopy-gen=true
