# pkg/apis/controller/common/v1beta1/zz_generated.deepcopy.go
@@ -177,6 +177,22 @@ func (in *Metric) DeepCopy() *Metric {
 }
 
 // DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
+func (in *MetricStrategy) DeepCopyInto(out *MetricStrategy) {
+	*out = *in
+	return
+}
+
+// DeepCopy is an autogenerated deepcopy function, copying the receiver, creating a new MetricStrategy.
+func (in *MetricStrategy) DeepCopy() *MetricStrategy {
+	if in == nil {
+		return nil
+	}
+	out := new(MetricStrategy)
+	in.DeepCopyInto(out)
+	return out
+}
+
+// DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
 func (in *MetricsCollectorSpec) DeepCopyInto(out *MetricsCollectorSpec) {
 	*out = *in
 	if in.Source != nil {
@@ -213,6 +229,11 @@ func (in *ObjectiveSpec) DeepCopyInto(out *ObjectiveSpec) {
 	if in.AdditionalMetricNames != nil {
 		in, out := &in.AdditionalMetricNames, &out.AdditionalMetricNames
 		*out = make([]string, len(*in))
+		copy(*out, *in)
+	}
+	if in.MetricStrategies != nil {
+		in, out := &in.MetricStrategies, &out.MetricStrategies
+		*out = make([]MetricStrategy, len(*in))
 		copy(*out, *in)
 	}
 	return
