# pkg/apis/controller/experiments/v1beta1/experiment_defaults.go
@@ -30,6 +30,7 @@ import (
 func (e *Experiment) SetDefault() {
 	e.setDefaultParallelTrialCount()
 	e.setDefaultResumePolicy()
+	e.setDefaultObjective()
 	e.setDefaultTrialTemplate()
 	e.setDefaultMetricsCollector()
 }
@@ -44,6 +45,44 @@ func (e *Experiment) setDefaultParallelTrialCount() {
 func (e *Experiment) setDefaultResumePolicy() {
 	if e.Spec.ResumePolicy == "" {
 		e.Spec.ResumePolicy = DefaultResumePolicy
+	}
+}
+
+func (e *Experiment) setDefaultObjective() {
+	obj := e.Spec.Objective
+	if obj.MetricStrategies == nil {
+		obj.MetricStrategies = make([]common.MetricStrategy, 0)
+	}
+	objectiveHasDefault := false
+	metricsWithDefault := make(map[string]int)
+	for _, strategy := range obj.MetricStrategies {
+		if strategy.Name == obj.ObjectiveMetricName {
+			objectiveHasDefault = true
+			continue
+		}
+		metricsWithDefault[strategy.Name] = 1
+	}
+	// set default strategy of objective according to ObjectiveType
+	if !objectiveHasDefault {
+		var strategy common.MetricStrategy
+		switch e.Spec.Objective.Type {
+		case common.ObjectiveTypeMinimize:
+			strategy = common.MetricStrategy{Name: obj.ObjectiveMetricName, Value: common.ExtractByMin}
+		case common.ObjectiveTypeMaximize:
+			strategy = common.MetricStrategy{Name: obj.ObjectiveMetricName, Value: common.ExtractByMax}
+		case common.ObjectiveTypeUnknown:
+			strategy = common.MetricStrategy{Name: obj.ObjectiveMetricName, Value: common.ExtractByLatest}
+		default:
+			strategy = common.MetricStrategy{Name: obj.ObjectiveMetricName, Value: common.ExtractByLatest}
+		}
+		obj.MetricStrategies = append(obj.MetricStrategies, strategy)
+	}
+	// set default strategy of additional metrics to ExtractByLatest
+	for _, name := range obj.AdditionalMetricNames {
+		if _, ok := metricsWithDefault[name]; !ok {
+			strategy := common.MetricStrategy{Name: obj.ObjectiveMetricName, Value: common.ExtractByLatest}
+			obj.MetricStrategies = append(obj.MetricStrategies, strategy)
+		}
 	}
 }
 
