# pkg/apis/v1beta1/swagger.json
@@ -662,10 +662,18 @@
     },
     "v1beta1.Metric": {
       "properties": {
-        "name": {
+        "latest": {
           "type": "string"
         },
-        "value": {
+        "max": {
+          "type": "number",
+          "format": "double"
+        },
+        "min": {
+          "type": "number",
+          "format": "double"
+        },
+        "name": {
           "type": "string"
         }
       }
@@ -706,6 +714,13 @@
         "goal": {
           "type": "number",
           "format": "double"
+        },
+        "metricStrategies": {
+          "description": "This field is allowed to missing, experiment defaulter (webhook) will fill it.",
+          "type": "object",
+          "additionalProperties": {
+            "type": "string"
+          }
         },
         "objectiveMetricName": {
           "type": "string"
